Sun, 11 May 2008 15:00:07 +0200 <thp@perli.net>
Update German translation, refresh translations

	* data/messages.pot: Refreshed from source code
	* data/po/*.po: Refreshed from messages.pot
	* data/po/de.po: Refreshed and updated

Sat, 10 May 2008 16:45:36 +0200 <thp@perli.net>
Make gPodder respect the user's GNOME toolbar style settings

	* src/gpodder/gui.py: Add Stefan Lohmaier to list of bug reporters
	* data/gpodder.glade: Remove the preset toolbar style (use user's
	configured toolbar style) and set the episode-related toolbar buttons
	to be "important" (so the text is displayed in the mixed mode); thanks
	to Stefan Lohmaier on gPodder Bugzilla for reporting this bug
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=105)

Sat, 10 May 2008 13:38:34 +0200 <thp@perli.net>
Improve feed cache update speed, thanks to the users at ITT

	* src/gpodder/cache.py: fetch() now returns an (updated, feed) tuple,
	where "updated" is a boolean value telling if the feed has been
	updated since the last run and "feed" is the feedparser feed data; fix
	a bug where the etag and the last-modified time were never used in a
	conditional download of not-changed feeds (my fault ;)
	* src/gpodder/console.py: Sync the feed cache to disk after adding a
	new podcast to the subscription list
	* src/gpodder/gui.py: Pass the list of old channels to the
	load_channels() function call, so we can save some CPU cycles when the
	feed has not changed and we are allowed to re-use the old, parsed one
	* src/gpodder/libpodcasts.py: Don't auto-sync the feed cache when
	getting the podcastChannel for a feed; add podcastChannel.sync_cache()
	function that saves the feed cache to disk; make it possible to pass a
	list of old channels to load_channels() and use the old channel
	objects in case the new one hasn't changed since the last run
	(see http://www.internettablettalk.com/forums/showpost.php?p=179261&postcount=62)

Sat, 10 May 2008 13:33:49 +0200 <thp@perli.net>