@@ -91,7 +91,8 @@ app_authors = [
     'Ortwin Forster', 'Paul Elliot', 'Paul Rudkin',
     'Pavel Mlčoch', 'Peter Hoffmann', 'Philippe Gouaillier', 'Pieter de Decker',
     'Preben Randhol', 'Rafael Proença', 'red26wings', 'Richard Voigt', 
-    'Robert Young', 'Roel Groeneveld', 'Seth Remington', 'Shane Donohoe', 
+    'Robert Young', 'Roel Groeneveld',
+    'Scott Wegner', 'Seth Remington', 'Shane Donohoe', 
     'Stefan Lohmaier', 'Stephan Buys', 'Stylianos Papanastasiou', 'Teo Ramirez', 
     'Thomas Matthijs', 'Thomas Mills Hinkle', 'Thomas Nilsson', 
     'Tim Michelsen', 'Tim Preetz', 'Todd Zullinger', 'Tomas Matheson', 'VladDrac', 
