@@ -1,3 +1,12 @@
+Mon, 12 May 2008 11:04:53 +0200 <thp@perli.net>
+Fix bugs in the calculate_size utility function
+
+	* src/gpodder/util.py: Fix problem when accessing files or folders is
+	not possible in calculate_size(); thanks to Scott Wegner for reporting
+	this bug on Launchpad
+	* src/gpodder/gui.py: Add Scott Wegner to list of bug reporters
+	(Closes: https://bugs.launchpad.net/ubuntu/+source/gpodder/+bug/201276)
+
 Sun, 11 May 2008 15:00:07 +0200 <thp@perli.net>
 Update German translation, refresh translations
 
